--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title>Andrey Bilokonsky's Website for Lab Assignment 5 - HTML 2</title>
-        <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link href="css/example.css" type ="text/css" rel = "stylesheet" />
+
     </head>
 <body>
     <section class="hero is-fullheight is-dark">
@@ -13,7 +14,7 @@
             <div class="columns is-vcentered is-centered">
                 <div class="column is-6">
                     <div class="block">
-                        <h1 class="title is-2">Welcome to Andrey Bilokonsky's Website.</h1>
+                        <h1 class="title is-2">Welcome  to Andrey Bilokonsky's Website.</h1>
                     </div>
 
                     <div class="block">
