--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
         <title>Andrey Bilokonsky's Website for Lab Assignment 5 - HTML 2</title>
 
         <link href="css/example.css" type ="text/css" rel = "stylesheet" />
+        body {
+          background-color : black;
+          color: white;
+          padding: 20px;
+          font-family: Papyrus;}
+
+        h2 {
+          color: DarkCyan;}
+        h3 {
+            color: #ee3e75;}
+        table {
+          color: red;}
+        table {
+          background-color : gray;}
 
     </head>
 <body>
