--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
 
-        <title>Andrey Bilokonsky's Website for Lab Assignment 5 - HTML 2</title>
+    <title>Andrey Bilokonsky's Website for Lab Assignment 5 - HTML 2</title>
 
-        <link href="css/example.css" type ="text/css" rel = "stylesheet" />
+      <link href="css/example.css" type ="text/css" rel = "stylesheet" />
+      <style type="text/css">
         body {
           background-color : black;
           color: white;
@@ -19,7 +20,7 @@
           color: red;}
         table {
           background-color : gray;}
-
+      </style>
     </head>
 <body>
     <section class="hero is-fullheight is-dark">
