--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="block buttons">
                       <table>
 
-                        <tr><th>Link</th> <th> Speed </th>
+                        <tr><th>Link</th> <th> Photo </th>
 
 
                           <tr>
