--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-    <title>Andrey Bilokonsky's Website for Lab Assignment 5 - HTML 2</title>
+    <title>Andrey Bilokonsky's Website for Mini Project 2</title>
 
       <link href="css/example.css" type ="text/css" rel = "stylesheet" />
       <style type="text/css">
@@ -10,8 +10,11 @@
           background-color : black;
           color: white;
           padding: 20px;
-          font-family: Papyrus;}
-
+          font-family: ComicSans;
+          text-align: center;}
+        p {
+          text=align: left;
+          }
         h2 {
           color: DarkCyan;}
         h3 {
